--- a/public/css/style.css
+++ b/public/css/style.css
@@ -216,11 +216,10 @@ h6 {
 
 #intro {
     width: 100%;
-    /* height: 70vh; */
+    height: 100%;
     position: relative;
-    background: url("../img/intro-carousel/1.jpg") no-repeat;
+    background: url("../img/intro-carousel/BeeTract_Home1.png") no-repeat;
     background-size: cover;
-    border-bottom: 3px solid #F44336;
 }
 
 #intro .intro-content {
