--- a/public/css/style.css
+++ b/public/css/style.css
@@ -168,7 +168,6 @@ h6 {
 
 #header #logo h1 {
     font-size: 32px;
-    margin: 0;
     padding: 0;
     line-height: 45px;
     font-family: "Montserrat", sans-serif;
@@ -218,27 +217,26 @@ h6 {
     width: 100%;
     height: 100%;
     position: relative;
-    background: url("../img/intro-carousel/BeeTract_Home1.png") no-repeat;
+    background: url("../img/intro-carousel/BeeTract_Home1.jpg") no-repeat;
     background-size: cover;
 }
 
 #intro .intro-content {
     position: absolute;
-    bottom: 20%;
-    /* top: 0; */
-    /* left: 0; */
-    right: 0;
+    top: 0px;
+    left: 540px;
     z-index: 10;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
     text-align: left;
-    background: #00000036;
+    text-align: left;
+}
+
+#intro .intro-content1 {
+    position: absolute;
+    top: 0px;
     right: 0px;
+    z-index: 10;
     text-align: left;
-    top: 0;
-    bottom: 0;
-    background: #261f1566;
+    text-align: left;
 }
 
 #intro .intro-content h2 {
@@ -246,7 +244,6 @@ h6 {
     margin-bottom: 30px;
     font-size: 24px;
     text-align: center;
-    background: #0000008c;
     padding: 35px;
     display: block;
     margin: 0 auto;
