--- a/public/css/style.css
+++ b/public/css/style.css
@@ -258,11 +258,12 @@ h6 {
 --------------------------------------------------------------*/
 
 #intro {
-    width: 100%;
+    width: 1920px;
+    height: 900px;
+    margin: auto;
     position: relative;
     background: url("../img/intro-carousel/BeeTract_Home1.jpg") no-repeat;
     background-size: cover;
-    resize: both;
 }
 
 #intro .intro-content {
@@ -618,7 +619,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 
 .section-header {
-    margin-bottom: 30px;
+    margin-bottom: 70px;
 }
 
 .section-header h2 {
