--- a/public/css/style.css
+++ b/public/css/style.css
@@ -258,10 +258,8 @@ h6 {
 --------------------------------------------------------------*/
 
 #intro {
-    width: 1920px;
-    height: 900px;
-    margin: auto;
-    position: relative;
+    width: 100%;
+    position: 'relative';
     background: url("../img/intro-carousel/BeeTract_Home1.jpg") no-repeat;
     background-size: cover;
 }
@@ -352,7 +350,6 @@ h6 {
 
 #intro #intro-carousel .item {
     width: 100%;
-    height: 70vh;
     background-size: cover;
     background-repeat: no-repeat;
     -webkit-transition-property: opacity;
@@ -624,7 +621,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 .section-header h2 {
     font-size: 32px;
-    color: #F44336;
+    color: #A4215d;
     text-transform: uppercase;
     font-weight: 700;
     position: relative;
@@ -641,7 +638,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     height: 3px;
     bottom: 0;
     left: 0;
-    border-top: #FF9800 solid 2px;
+    border-top: #A4215d solid 2px;
     right: 0;
     text-align: center;
     margin: 0 auto;
@@ -735,8 +732,11 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #services .box {
-    padding: 40px;
+    position: relative;
+    padding: 90px;
     margin-bottom: 40px;
+    width: 500px;
+    height: 400px;
     background: #fff;
     transition: 0.4s;
     border: 1px solid #dedede;
@@ -768,8 +768,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #services .box .icon i:before {
-    background: #0c2e8a;
-    background: linear-gradient(45deg, #FF9800 0%, #FF5722 100%);
+    background: #A4215d;
     background-clip: border-box;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -778,7 +777,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #services .box h4 {
     margin-left: 100px;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 30px;
     display: block;
     width: 100%;
     text-align: center;
