--- a/public/css/style.css
+++ b/public/css/style.css
@@ -159,6 +159,7 @@ h6 {
 
 #header {
   padding: 20px 0;
+  width: 100%;
   height: 120px;
   transition: all 0.5s;
   z-index: 997;
@@ -256,13 +257,12 @@ h6 {
 /*--------------------------------------------------------------
 # Intro Section
 --------------------------------------------------------------*/
-
 #intro {
-  width: 100%;
+ width: 100%;
   position: relative;
   background: url("../img/intro-carousel/BeeTract_Home1.jpg") no-repeat;
-  background-size: cover;
-  border-bottom: 3px solid #F44336;
+  background-size: 1920px 900px;
+  border-bottom: 3px solid #A4215d;
 }
 
 #intro .intro-content {
@@ -291,7 +291,7 @@ h6 {
 #intro .intro-content h2 span {
   font-size: 55px;
   text-transform: uppercase;
-  color: #FF9800;
+  color: #A4215d;
   font-weight: bold;
 }
 
