--- a/public/css/style.css
+++ b/public/css/style.css
@@ -259,11 +259,9 @@ h6 {
 
 #intro {
     width: 100%;
-    max-height: 100vh;
     position: relative;
     background: url("../img/intro-carousel/BeeTract_Home1.jpg") no-repeat;
-    background-size: 100% 100%;
-    background-position: center;
+    background-size: cover;
 }
 
 #intro .intro-content {
@@ -307,9 +305,6 @@ h6 {
 }
 
 @media (max-width: 767px) {
-    #intro {
-        width: 400vw;
-    }
     #intro .intro-content2 p {
         font-size: 22px;
         padding: 15px;
@@ -363,6 +358,7 @@ h6 {
 }
 
 #intro #intro-carousel::before {
+    content: '';
     /* background: linear-gradient(45deg, #8BC34A -132%, #000000 100%); */
     position: absolute;
     height: 100%;
@@ -377,7 +373,9 @@ h6 {
 
 #intro #intro-carousel .item {
     width: 100%;
+    height: 80vh;
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     -webkit-transition-property: opacity;
     transition-property: opacity;
@@ -402,7 +400,7 @@ h6 {
     position: absolute;
     display: none;
     top: 100%;
-    left: 800px;
+    left: 0px;
     z-index: 99;
 }
 
@@ -555,7 +553,7 @@ h6 {
     background: #F44336;
     left: -240px;
     width: 150px;
-    overflow: hidden;
+    overflow-y: auto;
     transition: 0.4s;
 }
 
