--- a/bizcraft-free/css/style.css
+++ b/bizcraft-free/css/style.css
@@ -1,3 +1,4 @@
+-+-
 /*
 	Template Name: BizCraft Responsive HTML5/CSS3 Template
 	Author: themefisher
@@ -1072,7 +1073,6 @@ blockquote {
     bottom: 0;
     left: 0;
     right: 0;
-    background-image: url(../images/overaly.png);
 }
 
 .ts-flex-slider .flexslider .slides {
