--- a/src/Components/Home/style.css
+++ b/src/Components/Home/style.css
@@ -321,7 +321,7 @@ blockquote {
     transform: skew(0deg, 2deg);
 }
 
-.portfolio.angle:before {
+.portfolio.angle:before. {
     background: #f5f5f5;
 }
 
@@ -544,13 +544,16 @@ blockquote {
     line-height: 46px;
 }
 
+
+/*cover up extra shadows*/
+
 .hexagon {
     position: relative;
-    width: 190px;
-    height: 109.70px;
-    background-color: #a1205c;
-    margin: 34.85px 0;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.75);
+    width: 150px;
+    height: 86.60px;
+    background-color: #a5215d;
+    margin: 43.30px 0;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
 }
 
 .hexagon:before,
@@ -558,22 +561,22 @@ blockquote {
     content: "";
     position: absolute;
     z-index: 1;
-    width: 134.35px;
-    height: 134.35px;
+    width: 106.07px;
+    height: 106.07px;
     -webkit-transform: scaleY(0.5774) rotate(-45deg);
     -ms-transform: scaleY(0.5774) rotate(-45deg);
     transform: scaleY(0.5774) rotate(-45deg);
     background-color: inherit;
-    left: 27.8249px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.75);
+    left: 21.9670px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
 }
 
 .hexagon:before {
-    top: -67.1751px;
+    top: -53.0330px;
 }
 
 .hexagon:after {
-    bottom: -67.1751px;
+    bottom: -53.0330px;
 }
 
 
@@ -584,8 +587,8 @@ blockquote {
     position: absolute;
     top: 0px;
     left: 0;
-    width: 190px;
-    height: 109.6966px;
+    width: 150px;
+    height: 86.6025px;
     z-index: 2;
     background: inherit;
 }
