--- a/style.css
+++ b/style.css
@@ -101,8 +101,8 @@ h6 {
 
 
 /*--------------------------------------------------------------
-# Top Bar
---------------------------------------------------------------*/
+  # Top Bar
+  --------------------------------------------------------------*/
 
 #topbar {
     background: linear-gradient(45deg, #E91E63 -132%, #0c2e8a 100%);
@@ -154,26 +154,69 @@ h6 {
 
 
 /*--------------------------------------------------------------
-# Header
---------------------------------------------------------------*/
+  # Header
+  --------------------------------------------------------------*/
 
 #header {
     padding: 20px 0;
-    height: 84px;
+    width: 100%;
+    height: 120px;
     transition: all 0.5s;
     z-index: 997;
     background: #ffffff;
     box-shadow: 0px 6px 9px 0px rgba(0, 0, 0, 0.06);
-    border-top: solid 2px #F44336;
 }
 
 #header #logo h1 {
     font-size: 32px;
-    margin: 0;
-    padding: 0;
     line-height: 45px;
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Raleway:200');
+#box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 50px;
+    color: black;
+    font-family: 'Raleway';
+    font-size: 20px;
+}
+
+.gradient-border {
+    --borderWidth: 3px;
+    background: white;
+    position: relative;
+    border-radius: var(--borderWidth);
+}
+
+.gradient-border:after {
+    content: '';
+    position: absolute;
+    top: calc(-1 * var(--borderWidth));
+    left: calc(-1 * var(--borderWidth));
+    height: calc(100% + var(--borderWidth) * 2);
+    width: calc(100% + var(--borderWidth) * 2);
+    background: linear-gradient(60deg, #A4215d, #ef4e7b, #a166ab);
+    ;
+    border-radius: calc(2 * var(--borderWidth));
+    z-index: -1;
+    animation: animatedgradient 3s ease alternate infinite;
+}
+
+@keyframes animatedgradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 #header #logo h1 span i {
@@ -212,57 +255,41 @@ h6 {
 
 
 /*--------------------------------------------------------------
-# Intro Section
---------------------------------------------------------------*/
-
-#intro {
-    width: 100%;
-    /* height: 70vh; */
-    position: relative;
-    background: url("../img/intro-carousel/BeeTract_Home1.png") no-repeat;
-    background-size: cover;
-    border-bottom: 3px solid #F44336;
-}
+  # Intro Section
+  --------------------------------------------------------------*/
 
 #intro .intro-content {
-    position: absolute;
-    bottom: 20%;
-    /* top: 0; */
-    /* left: 0; */
-    right: 0;
+    position: relative;
+    top: 0px;
+    left: 41%;
     z-index: 10;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
     text-align: left;
-    background: #00000036;
-    right: 0px;
     text-align: left;
-    top: 0;
-    bottom: 0;
-    background: #261f1566;
 }
 
-#intro .intro-content h2 {
-    color: #fff;
-    margin-bottom: 30px;
-    font-size: 24px;
-    text-align: center;
-    background: #0000008c;
-    padding: 35px;
-    display: block;
-    margin: 0 auto;
+#intro .intro-content1 {
+    position: relative;
+    top: -350px;
+    left: 90%;
+    z-index: 10;
+}
+
+#intro .intro-content2 {
+    position: relative;
+    top: -450px;
+    left: 1%;
+    z-index: 10;
 }
 
 #intro .intro-content h2 span {
     font-size: 55px;
     text-transform: uppercase;
-    color: #FF9800;
+    color: #A4215d;
     font-weight: bold;
 }
 
 @media (max-width: 767px) {
-    #intro .intro-content h2 {
+    #intro .intro-content2 p {
         font-size: 22px;
         padding: 15px;
     }
@@ -334,8 +361,8 @@ h6 {
 
 
 /*--------------------------------------------------------------
-# Navigation Menu
---------------------------------------------------------------*/
+  # Navigation Menu
+  --------------------------------------------------------------*/
 
 
 /* Nav Menu Essentials */
@@ -419,19 +446,20 @@ h6 {
     padding: 10px 18px;
     text-decoration: none;
     display: inline-block;
-    color: #F44336;
+    color: black;
+    border: 0;
     font-family: "Raleway", sans-serif;
     font-weight: 700;
-    font-size: 14px;
+    font-size: 25px;
     outline: none;
     border: 1px solid transparent;
 }
 
 .nav-menu li:hover>a,
 .nav-menu>.menu-active>a {
-    color: #ffffff;
-    border: 1px solid #FF5722;
-    background: #F44336;
+    color: white;
+    border: 1px solid #111;
+    background: #A4215d;
 }
 
 .nav-menu>li {
@@ -440,9 +468,6 @@ h6 {
 
 .nav-menu ul {
     margin: 4px 0 0 0;
-    padding: 10px;
-    box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-    background: #fff;
 }
 
 .nav-menu ul li {
@@ -454,7 +479,7 @@ h6 {
     color: #333;
     transition: 0.3s;
     display: block;
-    font-size: 13px;
+    font-size: 20px;
     text-transform: none;
 }
 
@@ -504,15 +529,15 @@ h6 {
     bottom: 0;
     z-index: 998;
     background: #F44336;
-    left: -260px;
-    width: 260px;
+    left: -240px;
+    width: 240px;
     overflow-y: auto;
     transition: 0.4s;
 }
 
 #mobile-nav ul {
     padding: 0;
-    margin: 0;
+    margin-right: 0;
     list-style: none;
 }
 
@@ -524,7 +549,7 @@ h6 {
     color: #fffc;
     font-size: 16px;
     overflow: hidden;
-    padding: 10px 22px 10px 15px;
+    padding: 10px 10px 10px 15px;
     position: relative;
     text-decoration: none;
     width: 100%;
@@ -585,12 +610,12 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 
 /*--------------------------------------------------------------
-# Sections
---------------------------------------------------------------*/
+  # Sections
+  --------------------------------------------------------------*/
 
 
 /* Sections Header
---------------------------------*/
+  --------------------------------*/
 
 .section-header {
     margin-bottom: 30px;
@@ -598,7 +623,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 .section-header h2 {
     font-size: 32px;
-    color: #F44336;
+    color: #A4215d;
     text-transform: uppercase;
     font-weight: 700;
     position: relative;
@@ -615,7 +640,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     height: 3px;
     bottom: 0;
     left: 0;
-    border-top: #FF9800 solid 2px;
+    border-top: #A4215d solid 2px;
     right: 0;
     text-align: center;
     margin: 0 auto;
@@ -629,7 +654,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 
 /* About Section
---------------------------------*/
+  --------------------------------*/
 
 #about {
     padding: 60px 0 60px 0;
@@ -702,18 +727,21 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 
 /* Services Section
---------------------------------*/
+  --------------------------------*/
 
 #services {
-    padding: 60px 0 0 0;
+    padding: 0 0 0 0;
 }
 
 #services .box {
-    padding: 40px;
+    position: relative;
+    padding: 90px;
     margin-bottom: 40px;
+    width: 500px;
+    height: 400px;
     background: #fff;
     transition: 0.4s;
-    border: 1px solid #dedede;
+    border: 2px solid #A4215d;
 }
 
 #services .box:hover {
@@ -721,6 +749,8 @@ body.mobile-nav-active #mobile-nav-toggle {
     transform: translateY(-10px);
     -webkit-transform: translateY(-10px);
     -moz-transform: translateY(-10px);
+    background-color: rgb(150, 146, 146);
+    color: black;
 }
 
 #services .box .icon {
@@ -742,8 +772,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #services .box .icon i:before {
-    background: #0c2e8a;
-    background: linear-gradient(45deg, #FF9800 0%, #FF5722 100%);
+    background: #A4215d;
     background-clip: border-box;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -752,7 +781,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #services .box h4 {
     margin-left: 100px;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 30px;
     display: block;
     width: 100%;
     text-align: center;
@@ -765,9 +794,9 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #services .box p {
-    font-size: 14px;
+    font-size: 20px;
     line-height: 24px;
-    text-align: center;
+    text-align: justify;
     display: block;
     margin: 0;
     padding-top: 15px;
@@ -791,7 +820,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 
 /* Clients Section
---------------------------------*/
+  --------------------------------*/
 
 #clients {
     padding: 60px 0;
@@ -832,7 +861,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 
 /* Our Portfolio Section
---------------------------------*/
+  --------------------------------*/
 
 #portfolio {
     background: #F44336;
@@ -898,7 +927,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 
 /* Testimonials Section
---------------------------------*/
+  --------------------------------*/
 
 #testimonials {
     padding: 60px 0;
@@ -1006,7 +1035,7 @@ p.help-block li {
 
 
 /* Call To Action Section
---------------------------------*/
+  --------------------------------*/
 
 #call-to-action {
     background: #F44336;
@@ -1053,7 +1082,7 @@ p.help-block li {
 
 
 /* Our Team Section
---------------------------------*/
+  --------------------------------*/
 
 #team {
     background: #fff;
@@ -1126,7 +1155,7 @@ p.help-block li {
 
 
 /* Contact Section
---------------------------------*/
+  --------------------------------*/
 
 #contact {
     padding: 60px 0;
@@ -1141,7 +1170,6 @@ p.help-block li {
     font-size: 24px;
     display: inline-block;
     margin-bottom: 0;
-    float: left;
     background: #F44336;
     width: 36px;
     color: #fff;
@@ -1201,9 +1229,7 @@ p.help-block li {
     }
 }
 
-@media (min-width: 768px) {
-    #contact .contact-phone {}
-}
+@media (min-width: 768px) {}
 
 #contact #google-map {
     height: 290px;
@@ -1274,8 +1300,8 @@ p.help-block li {
 
 
 /*--------------------------------------------------------------
-# Footer
---------------------------------------------------------------*/
+  # Footer
+  --------------------------------------------------------------*/
 
 #footer {
     background: #302d28;
@@ -1417,5 +1443,3 @@ p.help-block li {
     font-weight: 600;
     padding: 9px 0;
 }
-
-B
