--- a/src/Components/Home/style.css
+++ b/src/Components/Home/style.css
@@ -579,6 +579,16 @@ blockquote {
     margin-top: 0px;
 }
 
+@media (max-width: 767px) {
+    .s1,
+    .s2,
+    .s3,
+    .s4,
+    .s5 {
+        margin: auto;
+    }
+}
+
 .hexagon:before,
 .hexagon:after {
     content: "";
