made mobile friendly as well

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -221,7 +221,7 @@ h6 {
     position: relative;
     background: url("../img/intro-carousel/BeeTract_Home1.jpg") no-repeat;
     background-size: cover;
-    border-bottom: 3px solid #F44336;
+    border-bottom: 3px solid #a5215d;
 }
 
 .hello {
