--- a/src/Components/Home/style.css
+++ b/src/Components/Home/style.css
@@ -579,13 +579,100 @@ blockquote {
     margin-top: 0px;
 }
 
+.k1 {
+    float: left;
+    font-size: 20px;
+    width: 200px;
+    margin-top: 50px;
+    margin-left: 95px;
+    font-weight: bold;
+    color: black
+}
+
+.k2 {
+    float: left;
+    font-size: 20px;
+    width: 200px;
+    margin-top: 50px;
+    margin-left: 180px;
+    font-weight: bold;
+    color: black;
+}
+
+.k3 {
+    float: left;
+    font-size: 20px;
+    width: 230px;
+    margin-top: 45px;
+    margin-left: 15px;
+    font-weight: bold;
+    color: black;
+}
+
+.k4 {
+    float: left;
+    font-size: 20px;
+    width: 230px;
+    margin-top: 20px;
+    margin-left: 200px;
+    font-weight: bold;
+    color: black;
+}
+
+.k5 {
+    float: left;
+    font-size: 20px;
+    width: 200px;
+    margin-top: 50px;
+    margin-left: 95px;
+    color: black;
+    font-weight: bold;
+}
+
+.k6 {
+    float: left;
+    font-size: 20px;
+    width: 230px;
+    margin-top: 25px;
+    margin-left: 180px;
+    font-weight: bold;
+    color: black;
+}
+
+.k7 {
+    font-weight: bold;
+    margin-left: 16px;
+    margin-top: 50px;
+    margin-right: -20px;
+    font-size: 18px;
+}
+
 @media (max-width: 767px) {
     .s1,
     .s2,
     .s3,
     .s4,
-    .s5 {
-        margin: auto;
+    .s5,
+    .s6 {
+        margin-left: 50%;
+        margin-right: auto;
+        margin-top: auto;
+        margin-bottom: 20px;
+        justify-content: center;
+    }
+    .k1,
+    .k2,
+    .k3,
+    .k4,
+    .k5,
+    .k6 {
+        margin-left: 10%;
+        margin-right: auto;
+        margin-top: auto;
+        margin-bottom: 20px;
+    }
+    .k7 {
+        display: none;
     }
 }
 
