--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,8 +11,7 @@ License: https://webthemez.com/license
 
 body {
     background: #fff;
-    color: #444;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 a {
@@ -33,6 +32,7 @@ p {
     margin: 0 0 30px 0;
 }
 
+p,
 h1,
 h2,
 h3,
@@ -1399,11 +1399,11 @@ p.help-block li {
 
 .pricing-table {
     background-color: #fff;
-    padding: 90px 0;
+    padding: 70px 0;
 }
 
 .pricing-table .block-heading {
-    padding-top: 50px;
+    padding-top: 10px;
     margin-bottom: 40px;
     text-align: center;
 }
@@ -1421,30 +1421,35 @@ p.help-block li {
 
 .pricing-table .heading {
     text-align: center;
-    padding-bottom: 10px;
+    margin-top: 10px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .pricing-table .item {
     background-color: #ffffff;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
-    border-top: 2px solid #F44336;
-    padding: 30px;
-    overflow: hidden;
+    box-shadow: 0px 2px 18px rgba(0, 0, 0, 0.075);
+    border-top: 2px solid #a5215d;
     position: relative;
 }
 
+.anim :hover {
+    box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
+    transform: translateY(-10px);
+    -webkit-transform: translateY(-10px);
+    -moz-transform: translateY(-10px);
+}
+
 .features ul {
-    margin: 0;
     padding: 0;
+    margin-left: 11px;
 }
 
 .features ul li {
+    margin-left: 10px;
     list-style: none;
-    text-align: center;
-    padding: 4px;
+    text-align: left;
     font-size: 15px;
-    color: #7d7d7d;
+    color: black;
 }
 
 .pricing-table .col-md-5:not(:last-child) .item {
@@ -1477,9 +1482,9 @@ p.help-block li {
 .pricing-table .item p {
     text-align: center;
     margin-top: 20px;
-    opacity: 0.7;
     padding: 0;
     margin: 24px 0;
+    color: 'black';
 }
 
 .pricing-table .features .feature {
@@ -1487,7 +1492,7 @@ p.help-block li {
 }
 
 .pricing-table .features h4 {
-    text-align: center;
+    text-align: left;
     font-size: 15px;
     padding: 5px;
     margin: 0;
@@ -1507,6 +1512,5 @@ p.help-block li {
     padding: 9px 0;
 }
 
-padding: 9px 0;
 
 }
