--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1427,12 +1427,12 @@ p.help-block li {
 
 .pricing-table .item {
     background-color: #ffffff;
-    box-shadow: 0px 2px 18px rgba(0, 0, 0, 0.075);
+    box-shadow: 0px 6px 22px rgba(0, 0, 0, 0.075);
     border-top: 2px solid #a5215d;
     position: relative;
 }
 
-.anim :hover {
+.pricing-table .anim :hover {
     box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
     transform: translateY(-10px);
     -webkit-transform: translateY(-10px);
