--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1432,11 +1432,9 @@ p.help-block li {
     position: relative;
 }
 
-.pricing-table .anim :hover {
-    box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
-    transform: translateY(-10px);
-    -webkit-transform: translateY(-10px);
-    -moz-transform: translateY(-10px);
+.pricing-table .item:hover {
+    opacity: 1;
+    background: rgba(0, 0, 0, 0.6);
 }
 
 .features ul {
@@ -1453,6 +1451,10 @@ p.help-block li {
 }
 
 .pricing-table .col-md-5:not(:last-child) .item {
+    margin-bottom: 30px;
+}
+
+.pricing-table .col-md-5:(:last-child) .item {
     margin-bottom: 30px;
 }
 
