--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1487,6 +1487,7 @@ p.help-block li {
     padding: 0;
     margin: 24px 0;
     color: 'black';
+    font-family: lato sans-serif
 }
 
 .pricing-table .features .feature {
