--- a/src/Components/Home/style.css
+++ b/src/Components/Home/style.css
@@ -92,6 +92,14 @@ h5,
     color: #A4215d;
 }
 
+.hexagon:hover {
+    box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
+    transform: translateY(-10px);
+    -webkit-transform: translateY(-10px);
+    -moz-transform: translateY(-10px);
+    transition: 0.4s;
+}
+
 .btn.btn-primary {
     color: #323232;
     border-radius: 50px;
@@ -319,7 +327,7 @@ blockquote {
     transform: skew(0deg, 2deg);
 }
 
-.portfolio.angle:before. {
+.portfolio.angle:before {
     background: #f5f5f5;
 }
 
@@ -585,7 +593,7 @@ blockquote {
     font-size: 20px;
     width: 200px;
     margin-top: 50px;
-    margin-left: 95px;
+    margin-left: 140px;
     font-weight: bold;
     color: black
 }
@@ -605,7 +613,7 @@ blockquote {
     font-size: 20px;
     width: 230px;
     margin-top: 45px;
-    margin-left: 15px;
+    margin-left: 50px;
     font-weight: bold;
     color: black;
 }
@@ -625,7 +633,7 @@ blockquote {
     font-size: 20px;
     width: 200px;
     margin-top: 50px;
-    margin-left: 95px;
+    margin-left: 180px;
     color: black;
     font-weight: bold;
 }
