--- a/public/css/style.css
+++ b/public/css/style.css
@@ -250,6 +250,17 @@ h6 {
     text-transform: none;
 }
 
+.hello5 {
+    position: absolute;
+    z-index: 10;
+    font-size: 30px;
+    color: white;
+    font-weight: 500;
+    text-transform: none;
+    bottom: 12%;
+    right: 10.5%;
+}
+
 .hello1 {
     position: absolute;
     z-index: 10;
