--- a/src/Components/SignIn/SignIn.css
+++ b/src/Components/SignIn/SignIn.css
@@ -89,8 +89,8 @@
     font-weight: 300
 }
 
-input,
-textarea {
+.SignIn input,
+.SignIn textarea {
     padding: 10px 12px 10px 12px;
     border: 1px solid lightgrey;
     border-radius: 2px;
