added counter for about us.

--- a/src/Components/Home/style.css
+++ b/src/Components/Home/style.css
@@ -337,13 +337,15 @@ blockquote {
 /* Parallax */
 
 .parallax {
+
     background-size: cover !important;
     background-repeat: no-repeat;
     background-position: 50% 0;
     background-attachment: fixed !important;
-    padding: 110px 0;
+    padding: 100px 0;
     color: #fff;
     position: relative;
+    
 }
 
 .parallax h2,
@@ -358,10 +360,11 @@ blockquote {
 
 .parallax-overlay {
     position: absolute;
-    left: 0;
+    left: -365px;
     top: 0;
-    width: 100%;
+    width: 200%;
     height: 100%;
+    background: #A4215d;
 }
 
 .parallax h3 {
@@ -373,7 +376,8 @@ blockquote {
 }
 
 .parallax2 {
-    background: no-repeat;
+    background: #A4215d;
+    background-size: cover;
 }
 
 .parallax3 {
@@ -387,6 +391,7 @@ blockquote {
 .parallax .btn.solid {
     margin-left: 10px;
 }
+
 
 
 /* Deafult title */
@@ -1694,15 +1699,15 @@ figure.effect-oscar:hover img {
 /* Counter
 ================================================== */
 
-.facts-wrapper {
-    background: #2a2d32;
-    color: #fff;
-}
+    .facts-wrapper {
+        background: #2a2d32;
+        color: #fff;
+    }
 
 .facts {
+    transition: all 300ms ease;
     position: relative;
     padding: 46px 40px 30px;
-    transition: all 300ms ease;
 }
 
 .facts:hover {
@@ -1738,7 +1743,7 @@ figure.effect-oscar:hover img {
 }
 
 .facts h3 {
-    font-size: 18px;
+    font-size: 20px;
     margin-top: 8px;
     color: #fff;
 }
